# tickmate-connectordb

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
tkcdb/: setup_device.py  tickmake_connectordb.py
